<resources>
    <string name="app_name">验证模型MVP</string>
    <string name="parameter_config">配置参数</string>
    <string name="train_delay">train_delay</string>
    <string name="nu">nu</string>
    <string name="gamma">gamma</string>
    <string name="detect_delay">detect_delay</string>
    <string name="threshold">threshold</string>
    <string name="english_language_toggle">英文语言开关</string>
    <string name="confirm">确认</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登录</string>
    <string name="typing_done">完成注册</string>
    <string name="waiting_for_typing_start">等待输入开始</string>
    <string name="go_on_for_typing">请继续输入，大概进度%d%%</string>
    <string name="please_type_text">请按照上面给出的文字进行输入，直到下面注册按钮可用并提示完成注册。</string>
    <string name="log_in_allow">验证通过，可登录</string>
    <string name="log_in_disable">验证未通过，不可登录，请重新进入登录页</string>
    <string name="preview_text">敏捷宣言强调的敏捷软件开发的四个核心价值是：个体和互动高于流程和工具，工作的软件高于详尽的文档，客户合作高于合同谈判，响应变化高于遵循计划。</string>
    <string name="preview_text_english">The four core values of agile software development highlighted in the Agile Manifesto are: individuality and interaction are higher than processes and tools, working software is higher than detailed documentation, customer cooperation is higher than contract negotiation, and response to changes is higher than following the plan.</string>
    <string name="spike_sensor_data_collection">Spike Sensor数据采集</string>
    <string name="spike_feature">Spike 特征生成</string>
    <string name="spike_reshapeData">Spike 数据分段</string>
    <string name="spike_call_python">Spike 调用Python</string>
    <string name="spike_getFeature">Spike 获取特征</string>
    <string name="spike_trainOCSVM">Spike 训练OCSVM</string>
    <string name="spike_predictOCSVM">Spike 预测OCSVM</string>
    <string name="save_sign_up_data_toggle">保存注册数据</string>
    <string name="save_sign_up_data_tag">数据Tag</string>
</resources>
