<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.view.MainActivity">

    <TextView
        android:id="@+id/helloMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/spikeSensorDataCollectionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spike_sensor_data_collection" />

    <Button
        android:id="@+id/featureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spike_feature" />

    <Button
        android:id="@+id/callPythonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spike_call_python" />

    <Button
        android:id="@+id/reshapeDataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spike_reshapeData" />

    <Button
        android:id="@+id/getFeatureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spike_getFeature" />

    <Button
        android:id="@+id/getParameterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parameter_config" />

    <Button
        android:id="@+id/trainOCSVMButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spike_trainOCSVM" />

    <Button
        android:id="@+id/predictOCSVMButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spike_predictOCSVM" />
</LinearLayout>